<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food3"
    tools:context=".Delivery_Registration">
    <ScrollView
        android:layout_width="280dp"
        android:layout_height="430dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00B8D4"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:drawablePadding="10dp"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_baseline_email_24" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">
                <com.hbb20.CountryCodePicker
                    android:id="@+id/ctrycode"
                    android:layout_width="120dp"
                    android:layout_height="match_parent" >
                </com.hbb20.CountryCodePicker>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/moblenumber"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Houseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_streert_no"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Areaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Pincodee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                >
                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin_code"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:textSize="14sp"/>
            <Spinner
                android:id="@+id/State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:entries="@array/States_array" />
            <TextView
                android:id="@+id/txt4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/city" />
            <Spinner
                android:id="@+id/City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                />
            <Button
                android:id="@+id/Signupp"
                android:layout_height="40dp"
                android:background="@drawable/btn_shape"
                android:layout_marginTop="20dp"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:layout_width="match_parent" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <TableRow
                    android:id="@+id/hr"
                    android:layout_width="105dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#595858"
                    />
                <TextView
                    android:id="@+id/OR"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:text="@string/OR"
                    android:textAlignment="center"
                    android:textColor="#040404"
                    android:textSize="17sp"/>
                <TableRow
                    android:id="@+id/dr"
                    android:layout_width="105dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#595858"/>

            </LinearLayout>
            <TextView
                android:id="@+id/tvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColor="#0C0C0C"
                android:textSize="18sp"
                android:text="@string/signin_with"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/emaillid"
                    android:layout_width="95dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnred"
                    android:drawableLeft="@drawable/whiteemail"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textColor="#FFFFFF"
                    android:drawableStart="@drawable/whiteemail"
                    android:layout_marginStart="15dp" />
                <Button
                    android:id="@+id/Phonenumber"
                    android:layout_width="97dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/btnbluish"
                    android:drawableLeft="@drawable/phonewhite"
                    android:drawablePadding="5dp"
                    android:padding="8dp"
                    android:text="@string/phone"
                    android:textColor="#FFFFFF"

                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:drawableStart="@drawable/phonewhite" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>